--- a/src/main/webapp/WEB-INF/templates/layouts/publicLayout.html
+++ b/src/main/webapp/WEB-INF/templates/layouts/publicLayout.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Accept-Language" content="en">
+    <meta name="robots" content="noindex, nofollow">    
     <title>Data exchange software connecting the healthcare community</title>
     <link rel="icon" href="data:," />
     <link href="/dspResources/css/front-end/main.css?v=2" rel="stylesheet" />
